add css rules, cleaned up code

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Interior designs</title>
     </head>
-
+    
     <body>
-    <h1>New home, new you!</h1>
-      <p>Hello, I'm Marta, an interior decorator. Interiors are my passion. I love to jump in on a difficult project and make people's dreams come true. I've been in the interior decoration business since I was a teenager and my mother would ask me for decorating advice. I've come a long way since then! Below is a sample of my work:</p>
+      <h1>New home, new you!</h1>
       <div class="img">
       <img src="img/before.jpg" alt="Picture before we got there">
       <img src="img/during.jpg" alt="while we're working">
       <img src="img/after.jpg" alt="after we finish">
-      </div>
+      <p>Hello, I'm Marta, an interior decorator. Interiors are my passion. I love to jump in on a difficult project and make people's dreams come true. I've been in the interior decoration business since I was a teenager and my mother would ask me for decorating advice. I've come a long way since then! To the right is a sample of my work.
+        
+        <h2>Here's a quote from my mother:</h2>
+        <blockquote><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</em></blockquote>
+      </p>
+      </div>      
     </body>
 </html>
